--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,21 @@
             android:layout_width="150dp"
             android:layout_height="150dp" />
 
+        <EditText
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text=""
+            android:ems="10"
+            android:id="@+id/url" />
+
+        <TextView
+            android:text="or paste URL here.."
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" />
+
         <Button
             android:padding="10dp"
             android:id="@+id/brnUploadImage"
